--- a/patient-default.properties
+++ b/patient-default.properties
@@ -3,6 +3,7 @@
 server.port=8080
 # Encodage URI utilise par Tomcat
 server.tomcat.uri-encoding=UTF-8
+spring.config.import=optional:configserver:http://localhost:9101
 
 # Utilisez "mongodb", qui est le nom du service dans docker-compose.yml
 spring.data.mongodb.host=${SPRING_DATA_MONGODB_HOST}
