--- a/patient-default.properties
+++ b/patient-default.properties
@@ -11,6 +11,17 @@ spring.data.mongodb.database=${SPRING_DATA_MONGODB_DATABASE}
 spring.data.mongodb.username=${SPRING_DATA_MONGODB_USERNAME}
 spring.data.mongodb.password=${SPRING_DATA_MONGODB_PASSWORD}
 spring.data.mongodb.authentication-database=admin
+# Configuration de la base de données MariaDB
+spring.datasource.url=jdbc:mariadb://localhost:3306/patientdb
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Configuration JPA
+spring.jpa.hibernate.ddl-auto=update   # Peut être 'create', 'update', 'validate' ou 'none'
+spring.jpa.show-sql=true              # Affiche les requêtes SQL dans la console
+spring.jpa.properties.hibernate.format_sql=true # Formatte les requêtes SQL affichées
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect # Dialecte spécifique à MariaDB
+
 
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
