--- a/patient-default.properties
+++ b/patient-default.properties
@@ -17,10 +17,10 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 # Configuration JPA
-spring.jpa.hibernate.ddl-auto=update   # Peut être 'create', 'update', 'validate' ou 'none'
-spring.jpa.show-sql=true              # Affiche les requêtes SQL dans la console
-spring.jpa.properties.hibernate.format_sql=true # Formatte les requêtes SQL affichées
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect # Dialecte spécifique à MariaDB
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
 
 springdoc.swagger-ui.path=/swagger-ui.html
