--- a/gateway-bff-default.properties
+++ b/gateway-bff-default.properties
@@ -1,2 +1,3 @@
-auth-config.username=${ secrets.userGateway }
-auth-config.password=${ secrets.passGateway }
+auth-config.username=${GATEWAY_USERGATEWAY}
+auth-config.password=${GATEWAY_GATEWAYPASSWORD}
+
