--- a/gateway-bff-default.properties
+++ b/gateway-bff-default.properties
@@ -1,3 +1,5 @@
 auth-config.username=${GATEWAY_USERGATEWAY}
 auth-config.password=${GATEWAY_GATEWAYPASSWORD}
 
+security.jwt.secret-key=${jwt_secret}
+security.jwt.expiration-time=900000  # 15 minutes en millisecondes
