--- a/gateway-bff-default.properties
+++ b/gateway-bff-default.properties
@@ -1,5 +1,6 @@
 auth-config.username=${GATEWAY_USERGATEWAY}
 auth-config.password=${GATEWAY_GATEWAYPASSWORD}
 
+# Secret de génération de token
 security.jwt.secret-key=${JWT_SECRET}
 security.jwt.expiration-time=900000  # 15 minutes en millisecondes
